--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-2.50MB/s(Youtube:不良林), server: 168.138.173.205, port: 22503, type: vmess, uuid: 62e99d02-7105-443d-eeff-2cfeb4a4fe11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-989.4KB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: 14.152.92.82, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-459.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇭🇰 香港-536.6KB/s(Youtube:不良林), server: 43.129.175.128, port: 20010, type: vmess, uuid: 022fef82-1b48-440b-a7e0-a47dc6bde5b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.91MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-2.85MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-2.37MB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-2.98MB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-2.48MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-571.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-2.33MB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-1.55MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.49MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-995.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-989.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.1KB/s(Youtube:不良林)
       - 🇭🇰 香港-536.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.85MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.37MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.33MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
