--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.51MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-995.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-2.08MB/s(Youtube:不良林), server: 134.195.198.95, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇸🇬 新加坡-3.71MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇨🇳 中国-817.4KB/s(Youtube:不良林), server: 14.152.92.81, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇫🇷 法国-2.31MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇺🇸 美国-729.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇮🇳 印度-1.94MB/s(Youtube:不良林), server: in.do.cl0udf1are.cf, port: 80, type: vmess, uuid: 389ba207-e732-4c63-b895-5862b3e4dad7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /aries, ws-headers: {Host: in.do.cl0udf1are.cf}}
+  - {name: 🇨🇦 加拿大-1.89MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.83MB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-161.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-326.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇺🇸 美国-707.3KB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
-  - {name: 🇺🇸 美国-2.86MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 未知国家-2.86MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
   - {name: 🇺🇸 美国-2.25MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-399.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-304.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 未知国家-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 未知国家-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 未知国家-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 未知国家-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 未知国家-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 未知国家-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-729.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-707.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 未知国家-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
